--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="grey-body-container">
-        <h1>Dr. Norman Borlaug</h1>
-        <p>The man who saved a billion lives</p>
-        <div>
+        <h1 class = "title">Dr. Norman Borlaug</h1>
+        <p class = "title"> The man who saved a billion lives</p>
+        <div id = "photo">
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="A greyscale picture of Dr. Norman Borlaug alongside 7 other individuals">
             <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
         </div>
